pointer to pointer, pointer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,10 @@
         "locale": "cpp",
         "queue": "cpp",
         "map": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "iomanip": "cpp",
+        "shared_mutex": "cpp",
+        "valarray": "cpp"
     },
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools",
     "C_Cpp.errorSquiggles": "Disabled",
